traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: ';' expected but 'else' found.
  else if (!(estFaceMur())){return(false)}
  ^